--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "react-router-dom": "^7.0.1"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "jwt-decode": "^4.0.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   }
 }
